[package]
name = "lgr_axum_api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
