[package]
name = "lgr_axum_api"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
axum = "0.8.1"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
log = "0.4"
pretty_env_logger = "0.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls" , "postgres", "time", "uuid"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
