[package]
name = "lgr_axum_api"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
axum = "0.8.1"
dotenvy = "0.15"
log = "0.4"
pretty_env_logger = "0.5"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls" , "postgres", "time", "uuid"] }
thiserror = "2.0.12"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
